link - new instance compatible with java 16